test/LitTests/SemanticAnalysis/Exceptions/RethrowOutsideCatch.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

// Entry point.
export int testEntryPoint(unused int argc, unused ubyte ** argv) {
	// CHECK: .loci:9:2: error: cannot re-throw exception outside of catch clause
	throw;
}

// CHECK: 1 error generated.
